--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
+.spin-button-none::-webkit-inner-spin-button,
+.spin-button-none::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
