--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-scroll-bar::-webkit-scrollbar {
+  background: transparent !important;
+  width: 8px;
+  height: 8px;
+}
+
+.custom-scroll-bar::-webkit-scrollbar-thumb {
+  background: #eaecf0 !important;
+  max-height: 20px !important;
+  border-radius: 32px;
+}
